1. Added Logo icons 2. Added values-en and strings for nav-drawer in spanish and English.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MiS</string>
+    <string-array name="nav_drawer_titles">
+        <item>Billetera</item>
+        <item>Rutas</item>
+        <item>Tiempo</item>
+    </string-array>
 </resources>
