--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="apikey_maps_foronda">AIzaSyAdBvoRVLAfgMFHn5gH03wC2PpNAqiu_ZI</string>
+    <string name="apikey_maps_felipe">AIzaSyBIxvq6zod0F8UnUSo-rdR9sBEPqkIuUik</string>
     <string name="app_name">MiS</string>
     <string-array name="nav_drawer_items">
         <item>Billetera</item>
