--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
 
     <string name="action_settings">Settings</string>
     <string name="label_wallet">Gastado :</string>
+    <string name="setting_name">Configuración</string>
 
 </resources>
