fragment class, xml layout and item navdrawer inclusion for spends

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
         <item>Billetera</item>
         <item>Rutas</item>
         <item>Tiempo</item>
+        <item>Gastos</item>
     </string-array>
 <!--
 <div>Icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>
@@ -27,4 +28,5 @@
     <string name="setting_name">Configuración</string>
     <string name="login_text">MiS - Sistema de información para el metro de Medellín</string>
     <string name="logout_text">Cerrar Sesión cuenta</string>
+    <string name="gastos_txt">Nuevos Gastos</string>
 </resources>
